# Alien-Breed-HD

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.txt  RELEASING.md  VERIFY_RELEASE.md  ab3d.ini.template
.github/workflows/: ci.yml  release.yml
cmake/: copy_ab3d_ini_if_missing.cmake  emscripten_sync_data.cmake
deployment/cloudflare/: _headers
docs/: ab3d1_vs_tkg_engine_differences.md
src/: ai.c  ai.h  audio.c  audio.h  control_loop.c  control_loop.h  display.c  display.h  emscripten_loop.c  emscripten_loop.h  emscripten_pthread_gate.js  game_data.c  game_data.h  game_loop.c  game_loop.h  game_state.c  game_state.h  game_types.h  input.c  input.h  io.c  level.c  level.h  logging.c  logging.h  main.c  math_tables.h  movement.c  objects.c  objects.h  player.c  player.h  poly_object.h  renderer.c  renderer.h  renderer_3dobj.c  renderer_3dobj.h  renderer_alloc.h  sb_decompress.c  settings.c  (+5 more)
tools/: enemy_frames_png.py  gun_frames_png.py  package_release.py  pal_to_header.py  parse_level.c  raw_to_wav.py  serve_emscripten.py  sha256sums.py
